<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/radius_medium"
        app:cardElevation="@dimen/elevation_medium"
        app:cardUseCompatPadding="true">

        <LinearLayout style="@style/MainContentContainer">

            <TextView
                android:id="@+id/id"
                style="@style/Text.Bold"
                android:text="@string/id" />

            <TextView
                android:id="@+id/id_value"
                style="@style/Text"
                tools:text="34" />

            <TextView
                android:id="@+id/title"
                style="@style/Text.Bold"
                android:text="@string/title" />

            <TextView
                android:id="@+id/title_value"
                style="@style/Text"
                tools:text="Article 6" />

            <TextView
                android:id="@+id/subtitle"
                style="@style/Text.Bold"
                android:text="@string/subtitle" />

            <TextView
                android:id="@+id/subtitle_value"
                style="@style/Text"
                tools:text="Article 6 subtitle with placeholder text" />

            <TextView
                android:id="@+id/date"
                style="@style/Text.Bold"
                android:text="@string/date" />

            <TextView
                android:id="@+id/date_value"
                style="@style/Text"
                tools:text="16/04/2013 11:48" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
