<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/radius_medium"
        app:cardElevation="@dimen/elevation_medium"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout style="@style/MainContentContainer">

                <TextView
                    android:id="@+id/id"
                    style="@style/ContentTitle"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/id_value"
                    style="@style/ContentValue"
                    tools:text="36" />

                <TextView
                    android:id="@+id/title"
                    style="@style/ContentTitle"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/title_value"
                    style="@style/ContentValue"
                    tools:text="Article 6" />

                <TextView
                    android:id="@+id/subtitle"
                    style="@style/ContentTitle"
                    android:text="@string/subtitle" />

                <TextView
                    android:id="@+id/subtitle_value"
                    style="@style/ContentValue"
                    tools:text="Article 6 subtitle with placeholder text" />

                <TextView
                    android:id="@+id/body"
                    style="@style/ContentTitle"
                    android:text="@string/body" />

                <TextView
                    android:id="@+id/body_value"
                    style="@style/ContentValue"
                    tools:text="Article 6 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Article 6" />

                <TextView
                    android:id="@+id/date"
                    style="@style/ContentTitle"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/date_value"
                    style="@style/ContentValue"
                    tools:text="16/04/2013 11:48" />

            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</RelativeLayout>
